fixed pop up bug where it would display behind the categories h1 homepage

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -394,6 +394,7 @@ footer {
 }
 
 .popup-box {
+    z-index: 3;
     position: fixed;
     top: 60%;
     left: 50%;
@@ -1103,4 +1104,3 @@ footer {
 }
 
 /* Note: Incomplete styling of the advertisement and the pop-up ad */
-
